Concat user name parts in the REST endpoint